[gd_scene load_steps=31 format=3 uid="uid://cwqd117ianhrh"]

[ext_resource type="Script" uid="uid://b1w68g867f652" path="res://globalScenes/characterController.gd" id="1_6mksa"]
[ext_resource type="Script" uid="uid://6qdlcyk8jlel" path="res://globalScenes/ControllerCamera.gd" id="2_1nxij"]
[ext_resource type="ArrayMesh" uid="uid://d4m8yv7axmqxy" path="res://Assets/Models/Player/player.obj" id="2_2mclm"]
[ext_resource type="Script" uid="uid://b3b22gjxryt33" path="res://globalScenes/ray_cast_3d.gd" id="3_wpofk"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ewuyu"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sr6vd"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j58f5"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7ipvw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ewuyu")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_sr6vd")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_j58f5")
blend_point_2/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g6l4k"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ugkkh"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gix6k"]
animation = &"Run"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hfdgb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_g6l4k")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ugkkh")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_gix6k")
blend_point_2/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sbjxl"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i0qrh"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fomrg"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_52mb5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sbjxl")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_i0qrh")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_fomrg")
blend_point_2/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e750e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mgg7x"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ujojy"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bjstg"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cm7f5"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0b8x7"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_74siq"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jc147"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_7ipvw")
states/Idle/position = Vector2(367, 100)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_hfdgb")
states/Run/position = Vector2(496, 47)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_52mb5")
states/Walk/position = Vector2(496, 165)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_e750e"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_mgg7x"), "Run", "Walk", SubResource("AnimationNodeStateMachineTransition_ujojy"), "Walk", "Run", SubResource("AnimationNodeStateMachineTransition_bjstg"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_cm7f5"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_0b8x7"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_74siq")]

[sub_resource type="Animation" id="Animation_2vjok"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.45, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_mivah"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_slijq"]
resource_name = "Run"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.304129, 0), Vector3(0, 0.5, 0), Vector3(0, 0.304129, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_ri5ux"]
resource_name = "Walk"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.350107, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgv2e"]
_data = {
&"Idle": SubResource("Animation_2vjok"),
&"RESET": SubResource("Animation_mivah"),
&"Run": SubResource("Animation_slijq"),
&"Walk": SubResource("Animation_ri5ux")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j5e41"]
radius = 0.333572
height = 2.01153

[node name="Z" type="CharacterBody3D" groups=["Character"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28263, 0)
floor_max_angle = 1.0472
script = ExtResource("1_6mksa")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_jc147")
anim_player = NodePath("../animPlayer")
parameters/conditions/idle = false
parameters/conditions/run = false
parameters/conditions/walk = false
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Run/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(-1, 0.0212766)

[node name="animPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kgv2e")
}

[node name="Head" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("2_1nxij")

[node name="Loooky" type="RayCast3D" parent="Head"]
transform = Transform3D(2, 0, 0, 0, -1.46959e-07, -2, 0, 3.36204, -8.74228e-08, 0, 0.016004, 0)
script = ExtResource("3_wpofk")

[node name="FlashLight" type="SpotLight3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 0.992399, -0.123065, 0, 0.123065, 0.992399, 0.186683, -0.556482, 0)
visible = false
light_energy = 8.415
light_volumetric_fog_energy = 1.5
shadow_enabled = true
spot_range = 13.7568
spot_angle = 25.3125

[node name="ZColl" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.069485, -0.126369, 0.0684296)
shape = SubResource("CapsuleShape3D_j5e41")

[node name="ZMesh" type="MeshInstance3D" parent="ZColl"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.207406, -0.317895)
mesh = ExtResource("2_2mclm")

[node name="SenseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Walking" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="SenseTimer" to="." method="_on_sense_timer_timeout"]
